fix: adjust icon container scaling and alignment issues

--- a/packages/pluggableWidgets/image-web/src/ui/Image.scss
+++ b/packages/pluggableWidgets/image-web/src/ui/Image.scss
@@ -1,6 +1,9 @@
 .mx-image-viewer {
     width: 100%;
     height: 100%;
+    &-icon {
+        height: unset;
+    }
 }
 
 .mx-image-viewer-responsive img {
